fixed some layout issues with the menu and items inside the menu, fixed a bug where background color was not updating due to it beeing set inside the css of app component

--- a/public/global.css
+++ b/public/global.css
@@ -6,6 +6,7 @@ html, body {
 
 body {
 	/*background-color: #00ffff;*/
+	background-color: #F4F6F9;
 	color: #333;
 	margin: 0;
 	box-sizing: border-box;
